--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "prisma": "^5.10.2",
         "react": "^18",
         "react-dom": "^18",
+        "react-icons": "^5.3.0",
         "sass": "^1.71.1",
         "xml2js": "^0.6.2"
     },
